--- a/css/style.css
+++ b/css/style.css
@@ -329,14 +329,14 @@ ul.btn li:last-child {
 
 .navigation.navbar-dark .navbar-nav .nav-link:focus,
 .navigation.navbar-dark .navbar-nav .nav-link:hover {
-     color: #51fe44;
+     color: #a21414;
 }
 
 .navigation.navbar-dark .navbar-nav .active>.nav-link,
 .navigation.navbar-dark .navbar-nav .nav-link.active,
 .navigation.navbar-dark .navbar-nav .nav-link.show,
 .navigation.navbar-dark .navbar-nav .show>.nav-link {
-     color: #51fe44;
+     color: #a21414;
 }
 
 .navbar-expand-md .navbar-nav {
@@ -364,13 +364,14 @@ ul.btn li:last-child {
 
 .header {
      width: 100%;
+     height: 100px;
      padding: 20px 30px;
      border-bottom: #000 solid 20px;
-     background-image: linear-gradient(to bottom, #1559b7, #4f7af3);
+     background-image: linear-gradient(to bottom, #a21414, #000000);
 }
 
 .logo a {
-     font-size: 40px;
+     font-size: 15px;
      font-weight: bold;
      text-transform: uppercase;
      color: #fff;
@@ -381,7 +382,7 @@ ul.btn li:last-child {
 /** banner section **/
 
 .banner_main {
-     background: url(../images/banner.jpg);
+     background-color: black;
      background-repeat: no-repeat;
      min-height: 700px;
      background-size: 100% 100%;
@@ -398,7 +399,7 @@ ul.btn li:last-child {
 
 .text-bg h1 {
      text-transform: uppercase;
-     color: #51fe44;
+     color: #a21414;
      font-size: 90px;
      line-height: 80px;
      padding-bottom: 35px;
@@ -476,7 +477,7 @@ ul.btn li:last-child {
 #banner1 .carousel-control-next i:hover,
 #banner1 .carousel-control-prev i:focus,
 #banner1 .carousel-control-prev i:hover {
-     background: #2f2c2c;
+     background: #a21414;
      color: #fff;
 }
 
@@ -496,7 +497,7 @@ ul.btn li:last-child {
 }
 
 .text-bg a:hover {
-     background-color: #292e39;
+     background-color: #a21414;
      color: #fff;
      transition: ease-in all 0.5s;
 }
@@ -511,11 +512,11 @@ ul.btn li:last-child {
 
 .titlepage h2 {
      font-size: 35px;
-     color: #090807;
+     color: #ffffff;
      line-height: 55px;
      font-weight: bold;
      padding: 0;
-     border-bottom: #0556c4 solid 1px;
+     border-bottom: #a21414 solid 1px;
      max-width: 300px;
      margin: auto;
 }
@@ -555,6 +556,7 @@ ul.btn li:last-child {
 
 .three_box {
      padding: 0 40px;
+     background-color: black;
 }
 
 .box_text {
@@ -587,7 +589,7 @@ ul.btn li:last-child {
 /** about section **/
 
 .about {
-     background: #fff;
+     background: #000000;
      padding: 90px 0 0px 0;
 }
 
@@ -633,10 +635,11 @@ ul.btn li:last-child {
 
 .wedo {
      padding-top: 70px;
+     background-color: black;
 }
 
 .wedo .titlepage p {
-     color: #141629;
+     color: #ffffff;
      display: block;
      font-size: 17px;
      font-weight: bold;
@@ -689,7 +692,7 @@ ul.btn li:last-child {
 }
 
 .blu {
-     color: #51fe44;
+     color: #a21414;
      font-size: 17px;
      line-height: 28px;
      font-weight: 600;
